tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SFMandComputers-AAAAAAAAAAAAAAAAAAAAHw==__RedstoneEmitter-AAAAAAAAAAAAAAAAAAAHzw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1999,
  "prerequisites": [
    1989
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Redstone Emitter sends redstone signals on each of its 6 faces. The redstone signal strength can be set to any value, add, subtract, and more.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Redstone Emitter",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1989
  ],
  "rewards": [],
  "tasks": []
}
