tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SFMandComputers-AAAAAAAAAAAAAAAAAAAAHw==__ShortTermMemory-AAAAAAAAAAAAAAAAAAAG1g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1750,
  "prerequisites": [
    1759
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Gotta get more RAM.\n\nMemory, or RAM, is essentially a temporary storage of data on your computer that can be rapidly accessed via your programs.\n\nHence the name Rapid Access Memory.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Short Term Memory",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1759
  ],
  "rewards": [],
  "tasks": []
}
