tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SFMandComputers-AAAAAAAAAAAAAAAAAAAAHw==__TheBasicsofSFM-AAAAAAAAAAAAAAAAAAAH4w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2019,
  "prerequisites": [
    1989
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Variables - Declaration vs Standard\nDeclaration is simply creating a variable with eligible blocks in it. This allows easy updating of workflows. For instance you could have a variable that contains 2 chests. You use it in a nifty for each loop and later add another chest. Simply update the variable and the for each loop will start using it.\n\nStandard variables are able to be inserted into the middle of a workflow (it has input/output) and thus can be modified on the run.\n\nPlease note that for each loop it will require an empty variable to work with. This is listed as \"Element\" in the loop.\n\nGlobal vs Local\nGlobal will keep changes to a variable that are done in the workflow, whereas local keeps anything done local to that part of the workflow.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Basics of SFM",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1989
  ],
  "rewards": [],
  "tasks": []
}
